moved the ffx, ffxc, ffx.bat and ffxc.bat to the bin directory (macosx and linux use the same start-up script); updated FFX promo